@@ -69,7 +69,7 @@ static JSObject* constructWithStringConstructor(ExecState* exec, JSObject*, cons
 ConstructType StringConstructor::getConstructData(ConstructData& constructData)
 {
     constructData.native.function = constructWithStringConstructor;
-    return ConstructTypeNative;
+    return ConstructTypeHost;
 }
 
 // ECMA 15.5.1
