@@ -48,7 +48,7 @@ static JSObject* constructXMLHttpRequest(ExecState* exec, JSObject* constructor,
 ConstructType JSXMLHttpRequestConstructor::getConstructData(ConstructData& constructData)
 {
     constructData.native.function = constructXMLHttpRequest;
-    return ConstructTypeNative;
+    return ConstructTypeHost;
 }
 
 } // namespace WebCore
