@@ -1,3 +1,9 @@
+2008-07-28  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Renamed "ConstructTypeNative" => "ConstructTypeHost".
+        
 2008-07-28  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Kevin Decker.
