@@ -1,3 +1,9 @@
+2008-07-28  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Sam Weinig.
+
+        Renamed "ConstructTypeNative" => "ConstructTypeHost".
+        
 2008-07-26  Mark Rowe  <mrowe@apple.com>
 
         Speculative fix for the wx build.
